# xiaomijiao-skills

./: .gitattributes  .gitignore  AGENTS.md  AIHubMix-Model-Check-Plan.md  AIHubMix-自动检查方案.md  API配置完成状态检查.md  CHROME-EXTENSION-INSTALL-GUIDE.md  CRON-CONFIG.md  CRON-OPTIMIZATION-COMPLETE.md  CRON-OPTIMIZATION-PLAN.md  DOCS-INDEX.md  GIT-INDEX.md  HEARTBEAT-CHECK-TASKS.md  HEARTBEAT.md  HEARTBEAT.md.backup.20260316_082115  IDENTITY.md  INDEX_STRUCTURE.md  LICENSE  MEMORY-LITE.md  MEMORY.md  MISSING-CONFIG-REPORT.md  OPERATIONS.md  OpenAI配置指南.md  PUPPETEER-INSTALLATION-COMPLETE.md  QMD依赖修复完成报告.md  QMD功能测试计划.md  QMD知识库完善完成报告.md  QMD知识库完成报告.md  README.md  SOUL.md  SSH-SECURITY-REPORT-2026-03-05.md  STRUCTURE-INDEX.md  STRUCTURE_AUDIT_REPORT.md  SYSTEM-CHECK-REPORT-2026-03-05.md  SYSTEM-CONFIGURATION-COMPLETE.md  SYSTEM-OPTIMIZATION-PLAN.md  SYSTEM_ORGANIZATION_REPORT_2026-03-20.md  TEST-ENVIRONMENT-STATUS.md  TEST-RESULTS-Multi-Search-Engine.md  TOOLS.md  (+40 more)
archive/projects/w3cos/: .gitignore  AI_DEVELOPMENT.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ISSUES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  hello  showcase
archive/projects/w3cos/.devcontainer/: devcontainer.json  post-create.sh
archive/projects/w3cos/.github/: FUNDING.yml  pull_request_template.md
archive/projects/w3cos/.github/ISSUE_TEMPLATE/: ai-task.md  bug-report.md  feature-request.md
archive/projects/w3cos/.github/workflows/: ai-pr-review.yml  ai-triage.yml  build-iso.yml  ci.yml
archive/projects/w3cos/crates/w3cos-a11y/: Cargo.toml
archive/projects/w3cos/crates/w3cos-a11y/src/: lib.rs  role.rs  tree.rs
archive/projects/w3cos/crates/w3cos-ai-bridge/: Cargo.toml
archive/projects/w3cos/crates/w3cos-ai-bridge/src/: a11y_api.rs  agent.rs  dom_access.rs  lib.rs  permissions.rs  screenshot.rs
archive/projects/w3cos/crates/w3cos-cli/: Cargo.toml
archive/projects/w3cos/crates/w3cos-cli/src/: main.rs
archive/projects/w3cos/crates/w3cos-compiler/: Cargo.toml
archive/projects/w3cos/crates/w3cos-compiler/src/: codegen.rs  lib.rs  parser.rs
archive/projects/w3cos/crates/w3cos-dom/: Cargo.toml
archive/projects/w3cos/crates/w3cos-dom/src/: css_style.rs  document.rs  element.rs  events.rs  lib.rs  node.rs  window.rs
archive/projects/w3cos/crates/w3cos-runtime/: Cargo.toml
archive/projects/w3cos/crates/w3cos-runtime/src/: layout.rs  lib.rs  render.rs  window.rs
archive/projects/w3cos/crates/w3cos-std/: Cargo.toml
archive/projects/w3cos/crates/w3cos-std/src/: color.rs  component.rs  lib.rs  style.rs
archive/projects/w3cos/examples/counter/: app.ts
archive/projects/w3cos/examples/dashboard/: app.ts
archive/projects/w3cos/examples/hello/: app.json  app.ts
archive/projects/w3cos/examples/hello-tsx/: app.tsx
archive/projects/w3cos/examples/showcase/: app.ts
archive/projects/w3cos/scripts/: create-issues.sh
archive/projects/w3cos/system/: INSTALL.md
archive/projects/w3cos/system/buildroot/: isolinux.cfg  w3cos_x86_64_defconfig
archive/projects/w3cos/system/rootfs_overlay/etc/: hostname  issue
archive/projects/w3cos/system/scripts/: build-iso.sh  post-build.sh  run-qemu.sh
projects/bounty/grainlify-bounty/contracts/grainlify-core/: Cargo.toml  GOVERNANCE.md  ISSUE_733_COMPLETE.md  MIGRATION_CHECKLIST.md  MIGRATION_TESTS_SUMMARY.md  UPGRADE_ROLLBACK_PATTERNS.md  lib.d
projects/bounty/grainlify-bounty/contracts/grainlify-core/src/: asset.rs  commit_reveal.rs  governance.rs  lib.rs  migration_hook_tests.rs  multisig.rs  nonce.rs  pseudo_randomness.rs  serialization_goldens.rs  test_core_monitoring.rs  test_performance_stats.rs  test_serialization_compatibility.rs
projects/bounty/grainlify-bounty/contracts/grainlify-core/tests/: asset_helper.rs
projects/bounty/grainlify-bounty/contracts/program-escrow/: CIRCUIT_BREAKER_POLICY.md  Cargo.toml  Dockerfile.test  EMERGENCY_WITHDRAW_POLICY.md  PROGRAM_SPENDING_LIMITS.md  PR_EMERGENCY_WITHDRAW_TESTS.md  README.md  REENTRANCY_GUARD_DOCUMENTATION.md  THRESHOLD_MONITORING.md  TIME_WEIGHTED_METRICS.md  test-docker.sh  test_error_recovery_only.sh
projects/bounty/grainlify-bounty/contracts/program-escrow/src/: claim_period.rs  error_recovery.rs  error_recovery_tests.rs  lib.rs  malicious_reentrant.rs  payout_splits.rs  rbac_tests.rs  reentrancy_guard.rs  reentrancy_tests.rs  (+21 more)
projects/tools/pumpfun-cli/: .coderabbit.yaml  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
projects/tools/pumpfun-cli/.claude/: settings.json
projects/tools/pumpfun-cli/.claude/hooks/: bash-guard.py  guard.py  lint.py  test-hooks.sh
projects/tools/pumpfun-cli/.github/: CODEOWNERS  pull_request_template.md
projects/tools/pumpfun-cli/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
projects/tools/pumpfun-cli/.github/workflows/: anti-spam-comments.yml  pr-title.yml  release.yml  test.yml
projects/tools/pumpfun-cli/idl/: pump_fun_idl.json
projects/tools/pumpfun-cli/scripts/: mainnet-test.sh  surfpool-autodiscover.sh  surfpool-test.sh
projects/tools/pumpfun-cli/src/pumpfun_cli/: __init__.py  cli.py  crypto.py  group.py  output.py
projects/tools/pumpfun-cli/tests/: test_limit_constraint.py  test_output.py  test_sell_validation.py  test_validate.py
projects/tools/pumpfun-cli/tests/test_commands/: test_config_cmd.py  test_json_flag.py  test_smoke.py  test_trade_cmd.py  test_tx_status_cmd.py  test_wallet_cmd.py
projects/tools/pumpfun-cli/tests/test_core/: test_config.py  test_crypto.py  test_info.py  test_pumpswap.py  test_tokens.py  test_trade.py  test_tx_status.py  test_validate.py  test_wallet.py
projects/tools/pumpfun-cli/tests/test_protocol/: test_address.py  test_client.py  test_curve.py  test_curve_extra.py  test_extras_instructions.py  test_idl_parser.py  test_instructions.py  test_pumpswap.py  test_pumpswap_async.py  test_pumpswap_instructions.py
projects/tools/pumpfun-cli/tests/test_surfpool/: conftest.py  test_extras.py  test_graduated_info.py  test_info.py  test_pumpswap.py  test_rpc_client.py  test_trade.py  test_wallet_transfer.py
(+3565 files in other folders)
