[workspace]
resolver = "2"
members = [
    "crates/w3cos-runtime",
    "crates/w3cos-compiler",
    "crates/w3cos-cli",
    "crates/w3cos-std",
    "crates/w3cos-dom",
    "crates/w3cos-a11y",
    "crates/w3cos-ai-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/anthropic-ai/w3cos"

[workspace.dependencies]
w3cos-runtime = { path = "crates/w3cos-runtime" }
w3cos-compiler = { path = "crates/w3cos-compiler" }
w3cos-std = { path = "crates/w3cos-std" }
w3cos-dom = { path = "crates/w3cos-dom" }
w3cos-a11y = { path = "crates/w3cos-a11y" }
w3cos-ai-bridge = { path = "crates/w3cos-ai-bridge" }
png = "0.17"

# Layout: Taffy 0.9 — Flexbox + Grid + Block + position
taffy = { version = "0.9", features = ["std", "flexbox", "grid", "block_layout", "content_size"] }

# Text layout: Parley — line-breaking, shaping, bidi, inline boxes
parley = "0.7"
fontdue = "0.9"

# Rendering: tiny-skia (CPU) — Phase 1; Vello (GPU) planned for Phase 2
tiny-skia = "0.11"

# Windowing
winit = "0.30"
softbuffer = "0.4"

# Core
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
