[project]
name = "pumpfun-cli"
version = "0.1.0"
description = "CLI for pump.fun on Solana — trade, launch, and browse tokens"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "typer",
    "httpx",
    "solana",
    "cryptography",
    "python-dotenv",
    "tomli-w",
    "base58>=2.1.1",
]

[project.scripts]
pumpfun = "pumpfun_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--ignore=tests/test_surfpool"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.0.0",
    "respx",
    "ruff>=0.9.0",
    "pre-commit",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/pumpfun_cli/cli.py" = ["E402"]      # imports after app setup — intentional Typer pattern
"tests/test_core/test_trade.py" = ["E402"] # imports after fixtures
"src/pumpfun_cli/crypto.py" = ["B904"]    # raise ValueError without from — intentional clean message
"src/pumpfun_cli/core/launch.py" = ["SIM115"] # open() without context manager — httpx needs tuple
