[package]
name = "w3cos-a11y"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "W3C OS accessibility tree — DOM to ARIA tree conversion for AI agents and screen readers"

[dependencies]
w3cos-dom = { workspace = true }
w3cos-std = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
