[package]
name = "w3cos-ai-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "W3C OS AI bridge — structured DOM access, accessibility tree, and annotated screenshots for AI agents"

[dependencies]
w3cos-dom = { workspace = true }
w3cos-std = { workspace = true }
w3cos-a11y = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
png = { workspace = true }
