[package]
name = "w3cos-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "W3C OS compiler — transpiles TypeScript (W3C Modern Subset) to native Rust code"

[dependencies]
w3cos-std = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
