[package]
name = "grainlify-core"
version = "0.1.0"
edition = "2021"

[lib]
# Use rlib only to avoid Windows "export ordinal too large" when this crate
# is built as a dependency for host targets (e.g. tests). Build the WASM contract
# via a dedicated contract crate or: cargo build -p grainlify-core --target wasm32-unknown-unknown
# with cdylib added back if needed for deployment.
crate-type = ["rlib"]

[features]
default = ["contract"]
contract = []
upgrade_rollback_tests = []
governance_contract_tests = []

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
